force-app/src/objects/TR1__Power_Notes_Supported_Object__mdt.object
<CustomObject>
    <description>List of supported related objects in Power Notes</description>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines if the related lookup is shown on Power Notes Creation page</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Fieldset_lookups_fields__c</fullName>
        <inlineHelpText>Fieldset on name object containing lookup fields used to determine related records (1 lookup field per related object used)</inlineHelpText>
        <label>Fieldset lookups fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Fieldset_search_list__c</fullName>
        <inlineHelpText>Fieldset on named object containing fields to show in search results (Add Related Record component)</inlineHelpText>
        <label>Fieldset search list</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Icon_Name__c</fullName>
        <inlineHelpText>SLDS icon name shown in the lookup field</inlineHelpText>
        <label>Icon Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Object_name__c</fullName>
        <inlineHelpText>sObject name to use in Power Notes relation</inlineHelpText>
        <label>Object name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SObject_To_Display__c</fullName>
        <inlineHelpText>List of Power Notes Supported sObject API Names where the entity appears as a related record. If blank, the related lookup is shown on all the supported objects.</inlineHelpText>
        <label>SObject API Names To Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Task_Field_Name__c</fullName>
        <inlineHelpText>API name of lookup field on Task for the another object (ex. Contact, TR1__Job__c and etc.)</inlineHelpText>
        <label>Task Field Name</label>
        <length>57</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Use_Subjects_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Power Notes Subjects Configurations are used to define the subject selection.</description>
        <inlineHelpText>If checked the Power Notes Subjects Configurations are used to define the subject selection.</inlineHelpText>
        <label>Use Subjects Configuration</label>
        <type>Checkbox</type>
    </fields>
    <label>Power Notes Supported Object</label>
    <pluralLabel>Power Notes Supported Objects</pluralLabel>
</CustomObject>